# course_work_7

./: .gitignore  README.md  pyproject.toml  requirements.txt
todolist/: manage.py
todolist/core/: admin.py  models.py
todolist/core/migrations/: 0001_initial.py
todolist/todolist/: settings.py
