[tool.poetry]
name = "course-work-7"
version = "0.1.0"
description = ""
authors = ["a-abdulin <abdulin@list.ru>"]
readme = "README.md"
packages = [{include = "course_work_7"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-dotenv = "^1.4.2"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
